# HabitBot

./: Dockerfile  alembic.ini  config.py  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: b61afe528a4f_first_migrate.py  b7eb4025dd55_initial_migration.py
app/: main.py  models.py
app/db/: database.py
habit_bot/: bot_init.py  button_menu.py  run_bot.py  run_reminder.py  wisdom_about_habits.txt
habit_bot/crud/habit/: create_habit.py  delete_habit.py  habit_info.py  habit_list.py  update_habit.py
habit_bot/crud/users/: auth_user.py  update_user_data.py  user_info.py  user_registration.py
habit_bot/handlers/: callbacks.py  commands.py  messages_handler.py
habit_bot/states_group/: states.py
postgres_db/postgres/base/16384/: 1247  1249  1249_fsm  1259  1259_fsm  2224  2579  2604  2606  2606_fsm  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  32782  32783  32787  32789  32790  32791  32795  32797  (+12 more)
postgres_db/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres_db/postgres/pg_stat/: pgstat.stat
postgres_db/postgres/pg_xact/: 0000
services/: handlers.py
