[tool.poetry]
name = "habitcontrolservice"
version = "0.1.0"
description = ""
authors = ["Belykh Igor <4340345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
sqlalchemy = "2.0.31"
alembic = "1.13.2"
pytelegrambotapi = "4.21.0"
typing_extensions = "4.12.2"
fastapi = "0.111.0"
uvicorn = "0.30.4"
pyjwt = "2.8.0"
apscheduler = "3.10.4"
asyncpg = "0.29.0"
passlib = {extras = ["argon2"], version = "1.7.4"}
aiogram = "3.10.0"
isort = "5.13.2"
psycopg2 = "^2.9.9"
sentry-sdk = "^2.12.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
